# bf

./: .gitignore  Cargo.toml  Makefile
data/programs/: copy_02.bf  copy_02.bf.origin  simple_copy_01.bf
data/programs/test/: copy_02.bf
scripts/: configure.sh  simon-run.sh
src/: backends.rs  core.rs  ir.rs  lexer.rs  lib.rs  main.rs  parser.rs  token.rs  tokenizer.rs
src/backends/: transpilers.rs  vm.rs
src/backends/transpilers/: c.rs  rust.rs
src/bf/: Cargo.toml
src/bf/src/: backends.rs  lib.rs
src/bf/src/backends/: transpilers.rs  vm.rs
src/bf/src/core/: parser.rs  pipeline.rs  token.rs
src/bf/src/runtimes/: runtime.rs
src/core/: io.rs  ir.rs  parser.rs  pipeline.rs  tokenizer.rs
src/core/ir/: optimizers.rs
src/runtimes/: runtime.c
