[package]
name = "bf"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "c"
path = "bin/transpilers/c.rs"

[[bin]]
name = "rust"
path = "bin/transpilers/rust.rs"

[[bin]]
name = "vm"
path = "bin/vm.rs"

[dependencies]
clap = {version = "4.5.*", features = ["unstable-doc"]}

[dev-dependencies]
test-case = "3.3.*"
pretty_assertions = "1.4.*"
